*** When upgrading, don't forget to: "cd bin ; ./checksetup.pl" ***
*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.7.5

The following changes below were from Jason Remillard
<jremillardshop@yahoo.com>:

* The topic view page has been modified so that a non-diff topic makes
  better use of screen real-estate.

* Non-diff topic text uploads now include the filename, rather than
  just "unknown".

* Turned off more project-specific display that should be hidden when
  projects are not enabled.

* Delete topic button moved to topic state option on view topic
  screen.

* List comments page modified so that it is now possible to filter by
  user and/or comment state.  It is also possible to show the context
  text associated with each comment.  This page can now be used as a
  form of a printable report, suitable for code inspection meetings.

* Configuration option $allow_comment_email (default true) which
  indicates if an email is sent for each comment made.  If the Cc
  field in the add comment page is filled, an email will be sent to
  that address regardless.

* The default page shown by Codestriker is the list of open topics,
  rather than all topics in the system.

Version 1.7.4

* Major documentation rewrite.  All documentation (installation/user
  guide/hacking) is now present in doc/codestriker.sgml, in DocBook
  format.

* Now have simple "Help" links on all screens, which link to the
  appropriate HTML segment of the Codestriker User's guide.

* The Bugzilla database name can be explicitly specified in the
  Codestriker configuration, to cater for non-standard Bugzilla
  deployments.

* Modified handling of Subversion diffs so it can handle diffs of the
  form cvs diff -r2:3 filename.

The following changes below were from Jason Remillard
<jremillardshop@yahoo.com>:

* The Codestriker title is now a link to the list topic page.

* If Bugzilla integration is not enabled (empty $bug_db), hide all of