@@ -30,6 +30,10 @@ $gzip = '/bin/gzip';
 # Location of the cvs binary.
 $cvs = '/usr/bin/cvs';
 
+# Location of the vss binary.  This can be ignored for deployments which don't
+# use VSS (Visual Source Safe).
+$vss = 'C:/Program Files/Microsoft Visual Studio/Common/VSS/win32/vss.exe';
+
 # If codestriker is installed differently to that described in the README file
 # (for example on the sourceforge servers), it may be necessary to explicitly
 # specify the location of the codestriker_css as a URL.
@@ -50,15 +54,18 @@ $bugtracker = '';
 # next example is the syntax used for specifying a Subversion repository,
 # which is simple the subversion repository URL prefixed by svn:
 #
-# The final example is a pserver repository.  The full username, password,
+# The next example is a pserver repository.  The full username, password,
 # hostname and repository form must be used here.  Typically, this would
 # be set to an anonymous user.
+#
+# The final example is a VSS repository.
 @valid_repositories =
     (
      '/home/sits/cvs',
      'http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi /cvsroot',
      'svn:http://svn.collab.net/repos/svn/trunk',
-     ':pserver:anonymous:password@cvs.sourceforge.net:/cvsroot'
+     ':pserver:anonymous:password@cvs.sourceforge.net:/cvsroot',
+     'vss:localhost'
     );
 
 # A mapping of repositories to filename viewers.  Examples of such systems
